fixed fb share button vertical alignment

--- a/stylesheets/post.css
+++ b/stylesheets/post.css
@@ -25,3 +25,8 @@ div.author-follow {
   top: -6px;
 }
 
+.fb-share-button span {
+  top: -6px
+}
+
+
